--- a/src/components/about/About.module.scss
+++ b/src/components/about/About.module.scss
@@ -1,3 +1,12 @@
+.show{
+  display: block;
+  font-size: 20px;
+}
+
+.notShow{
+  display: none;
+}
+
 .about {
   padding: 8px;
   background-color: rgba(0, 0, 0, 0.3);
@@ -15,7 +24,8 @@
   background: none;
   width: 20px;
   height: 20px;
-  margin-right: 4px;
+  // margin-right: 4px;
+  margin-left: 10px;
 }
 
 .about .btn {
