--- a/src/components/baseBoard/BaseBoard.module.scss
+++ b/src/components/baseBoard/BaseBoard.module.scss
@@ -1,8 +1,7 @@
 .base {
   background-color: rgba(0, 0, 0, 0.3);
-  // background-size: 100vh;
   padding: 10px;
-  position: absolute;
+  position: fixed;
   bottom: 0;
   width: 100%;
   text-align: center;
